--- a/openspace.cfg
+++ b/openspace.cfg
@@ -126,7 +126,7 @@ Documentation = {
     LicenseDocumentation = "${DOCUMENTATION}/License.html",
 }
 
-UseMultithreadedInitialization = true
+UseMultithreadedInitialization = false
 LoadingScreen = {
     ShowMessage = true,
     ShowNodeNames = true,
